firebase setup auth and mui refactor

--- a/.env
+++ b/.env
@@ -2,5 +2,22 @@ VITE_APP_VERSION=v1.3.0
 GENERATE_SOURCEMAP=false
 
 ## Backend API URL
-PUBLIC_URL = https://mantisdashboard.io/free
-VITE_APP_BASE_NAME = /free
+PUBLIC_URL = https://mantisdashboard.io/fitlink
+VITE_APP_BASE_NAME = /fitlink
+
+# REACT_APP_API_KEY_DEV=AIzaSyCaRMviLYEeHRZQpa5xuU_cNmC9pea0O9k
+# REACT_APP_AUTH_DOMAIN_DEV=fitlink-b3d6b.firebaseapp.com
+# REACT_APP_PROJECT_ID_DEV=fitlink-b3d6b
+# REACT_APP_STORAGE_BUCKET_DEV=fitlink-b3d6b.firebasestorage.app
+# REACT_APP_MESSAGING_SENDER_ID_DEV=77080916809
+# REACT_APP_APP_ID_DEV=1:77080916809:web:d6e887f9cb40078a5b2098
+# REACT_APP_APP_MEASUREMENT_ID=G-HB2X7650M8
+
+VITE_REACT_APP_API_KEY_DEV=AIzaSyCaRMviLYEeHRZQpa5xuU_cNmC9pea0O9k
+VITE_REACT_APP_AUTH_DOMAIN_DEV=fitlink-b3d6b.firebaseapp.com
+VITE_REACT_APP_PROJECT_ID_DEV=fitlink-b3d6b
+VITE_REACT_APP_STORAGE_BUCKET_DEV=fitlink-b3d6b.firebasestorage.app
+VITE_REACT_APP_MESSAGING_SENDER_ID_DEV=77080916809
+VITE_REACT_APP_APP_ID_DEV=1:77080916809:web:d6e887f9cb40078a5b2098
+VITE_REACT_APP_APP_MEASUREMENT_ID=G-HB2X7650M8
+
