--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mantis-free-react-admin-template",
   "version": "1.3.0",
   "private": true,
-  "homepage": "https://mantisdashboard.io/free",
+  "homepage": "https://mantisdashboard.io/fitlink",
   "author": {
     "name": "CodedThemes",
     "email": "codedthemes@gmail.com",
@@ -20,8 +20,8 @@
     "@ant-design/colors": "^7.0.2",
     "@ant-design/icons": "^5.3.1",
     "@emotion/cache": "^11.11.0",
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@fontsource/inter": "^5.0.17",
     "@fontsource/poppins": "^5.0.12",
     "@fontsource/public-sans": "^5.0.17",
@@ -29,12 +29,17 @@
     "@mui/base": "^5.0.0-beta.38",
     "@mui/lab": "^5.0.0-alpha.167",
     "@mui/material": "^5.15.12",
-    "@mui/system": "^5.15.12",
+    "@mui/styles": "^6.4.1",
+    "@mui/system": "6.4.1",
+    "@react-firebase/auth": "^0.2.10",
     "@svgr/webpack": "^8.1.0",
     "@vitejs/plugin-react": "^4.2.1",
     "apexcharts": "^3.49.0",
+    "dayjs": "^1.11.13",
+    "firebase": "^11.2.0",
     "formik": "^2.4.5",
     "framer-motion": "^11.0.8",
+    "jotai": "^2.11.1",
     "lodash": "^4.17.21",
     "process": "^0.11.10",
     "prop-types": "^15.8.1",
@@ -43,6 +48,7 @@
     "react-copy-to-clipboard": "^5.1.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
+    "react-drag-drop-files": "^2.4.0",
     "react-number-format": "^5.3.3",
     "react-router": "^6.22.3",
     "react-router-dom": "^6.22.3",
