--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ lerna-debug.log*
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
-.env*
+
 # Runtime data
 pids
 *.pid
@@ -109,3 +109,6 @@ dist
 .bak
 
 Dockerfile
+
+
+.env
