--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "react-copy-to-clipboard": "^5.1.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
-    "react-drag-drop-files": "^2.4.0",
+    "react-dropzone": "^14.3.5",
     "react-number-format": "^5.3.3",
     "react-router": "^6.22.3",
     "react-router-dom": "^6.22.3",
