--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "mantis-free-react-admin-template",
   "version": "1.3.0",
   "private": true,
-  "homepage": "https://mantisdashboard.io/fitlink",
   "author": {
-    "name": "CodedThemes",
-    "email": "codedthemes@gmail.com",
-    "url": "https://codedthemes.com/"
+    "name": "SivSovanpanhavorn",
+    "email": "SivSovanpanhavorn@gmail.com",
+    "url": "https://main--panhavorn-portfolio.netlify.app/"
   },
   "scripts": {
     "start": "vite",
@@ -37,6 +36,8 @@
     "apexcharts": "^3.49.0",
     "dayjs": "^1.11.13",
     "firebase": "^11.2.0",
+    "firebase-functions": "^6.3.0",
+    "firebase-tools": "^13.29.2",
     "formik": "^2.4.5",
     "framer-motion": "^11.0.8",
     "jotai": "^2.11.1",
