--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "@svgr/webpack": "^8.1.0",
     "@vitejs/plugin-react": "^4.2.1",
     "apexcharts": "^3.49.0",
+    "axios": "^1.7.9",
+    "cors": "^2.8.5",
     "dayjs": "^1.11.13",
     "firebase": "^11.2.0",
     "firebase-functions": "^6.3.0",
