--- a/package.json
+++ b/package.json
@@ -30,8 +30,11 @@
     "@mui/material": "^5.15.12",
     "@mui/styles": "^6.4.1",
     "@mui/system": "6.4.1",
+    "@mui/x-date-pickers": "^7.25.0",
+    "@mui/x-date-pickers-pro": "^7.25.0",
     "@react-firebase/auth": "^0.2.10",
     "@svgr/webpack": "^8.1.0",
+    "@vis.gl/react-google-maps": "^1.5.1",
     "@vitejs/plugin-react": "^4.2.1",
     "apexcharts": "^3.49.0",
     "axios": "^1.7.9",
@@ -52,6 +55,7 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.3.5",
+    "react-multi-date-picker": "^4.5.2",
     "react-number-format": "^5.3.3",
     "react-router": "^6.22.3",
     "react-router-dom": "^6.22.3",
